# graphem-rapids

./: .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pylint.yml  pypi.yml  tests.yml
benchmarks/: compare_backends.py  run_benchmarks.py
examples/: graph_generator_example.py  quick_start_rapids.py  random_regular_example.py  real_world_datasets_example.py
graphem_rapids/: __init__.py  benchmark.py  datasets.py  generators.py  influence.py  visualization.py
graphem_rapids/backends/: __init__.py  embedder_cuvs.py  embedder_pytorch.py
graphem_rapids/utils/: __init__.py  backend_selection.py  memory_management.py
scripts/: run_comprehensive_tests.py
tests/: __init__.py  conftest.py  test_backend_selection.py  test_cuvs_backend.py  test_embedder.py  test_generators.py  test_influence.py  test_integration.py  test_memory_management.py  test_pytorch_backend.py
